[project]
name = "rhx-realtime-feed"
version = "0.1.0"
description = "Real-time feed for Intan RHX device"
requires-python = ">=3.8"
dependencies = [
    "PyQt5>=5.15.0",
    "pyqtgraph>=0.14.0",
    "numpy>=1.19.0",
    "pandas>=1.1.0",
    "scipy>=1.5.0",
    "matplotlib>=3.3.0",
    "transitions>=0.8.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["rhx_realtime_feed*"]

[project.scripts]
rhx-realtime-feed = "main:main"