[project]
name = "leech"
version = "1.1.0"
description = "Live Electrophysiology Experiment Capture Hub"
requires-python = ">=3.8"
dependencies = [
    "PyQt5>=5.15.0",
    "pyqtgraph>=0.14.0",
    "numpy>=1.19.0",
    "pandas>=1.1.0",
    "scipy>=1.5.0",
    "matplotlib>=3.3.0",
    "minismu-py>=0.1.0",
    "qdarkstyle>=3.2.0"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["leech*"]

[project.scripts]
leech = "main:main"